--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "motoapp",
   "version": "1.0.0",
   "description": "Vehicle dealer app",
-  "main": "app.js",
+  "main": "server.js",
   "dependencies": {
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
@@ -31,7 +31,7 @@
     "npm": "*"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "node server.js",
     "test": "IP=0.0.0.0 PORT=3030 mocha --timeout 5000 tests/*_test.js"
   },
   "repository": {
