--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsdom": "^11.6.2",
     "jsonwebtoken": "^8.2.0",
     "lodash": "^4.17.5",
+	"mailgun-js": "^0.20.0",
     "mocha": "^2.4.5",
     "mongodb": "^2.1.16",
     "mongoose": "^4.13.2",
