--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@angular/cli": "^1.5.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+	"csv-express": "^1.2.2",
     "ejs": "^2.4.1",
     "express": "^4.16.2",
     "express-jwt": "^5.3.1",
