--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ejs": "^2.4.1",
     "express": "^4.16.2",
     "express-jwt": "^5.3.1",
+	"googleapis": "^27.0.0",
     "jQuery": "^1.7.4",
     "jquery": "^3.3.1",
     "jsdom": "^11.6.2",
