--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^2.1.16",
     "mongoose": "^4.13.2",
     "morgan": "^1.7.0",
+	"node-cron": "^2.0.3",
     "object-assign": "4.1.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
